@@ -1,48 +1,49 @@
 import java.awt.geom.Point2D;
-import java.util.LinkedList;
 import java.util.concurrent.ThreadLocalRandom;
 
 public class GameBoard {
     public int boardHeight, boardWidth;
     public static Snake snake;
-    public LinkedList<Point2D.Double> obstacles;
     public Point2D.Double food;
 
     public GameBoard(int boardHeight, int boardWidth, int segmentSize) {
         this.boardHeight = boardHeight;
         this.boardWidth = boardWidth;
-        this.food = new Point2D.Double(ThreadLocalRandom.current().nextDouble(segmentSize/2, boardWidth - segmentSize/2), ThreadLocalRandom.current().nextDouble(segmentSize/2, boardHeight - segmentSize/2));
+        this.food = new Point2D.Double(ThreadLocalRandom.current().nextDouble(segmentSize / 2, boardWidth - segmentSize / 2),
+                ThreadLocalRandom.current().nextDouble(segmentSize / 2, boardHeight - segmentSize / 2));
     }
 
     void respawnFood(int segmentSize) {
-        Point2D.Double newFood = new Point2D.Double(ThreadLocalRandom.current().nextDouble(segmentSize/2, boardWidth - segmentSize/2), ThreadLocalRandom.current().nextDouble(segmentSize/2, boardHeight - segmentSize/2));
-        newFood.setLocation(ThreadLocalRandom.current().nextDouble(segmentSize/2, boardWidth - segmentSize/2), ThreadLocalRandom.current().nextDouble(segmentSize/2, boardHeight - segmentSize/2));
+        Point2D.Double newFood = new Point2D.Double(ThreadLocalRandom.current().nextDouble(segmentSize / 2, boardWidth - segmentSize / 2),
+                ThreadLocalRandom.current().nextDouble(segmentSize / 2, boardHeight - segmentSize / 2));
+        newFood.setLocation(ThreadLocalRandom.current().nextDouble(segmentSize / 2, boardWidth - segmentSize / 2),
+                ThreadLocalRandom.current().nextDouble(segmentSize / 2, boardHeight - segmentSize / 2));
         food = newFood;
     }
 
     public void checkBorderCollision(double gameSegmentSize) {
-        double distFromTop = snake.bodySegments.getFirst().getY();
+        double distFromTop = snake.bodySegments.get(0).getY();
         double distFromBottom = boardHeight - distFromTop;
-        double distFromLeft = snake.bodySegments.getFirst().getX();
+        double distFromLeft = snake.bodySegments.get(0).getX();
         double distFromRight = boardWidth - distFromLeft;
-        if(distFromTop <= gameSegmentSize/2) {
+        if (distFromTop <= gameSegmentSize / 2) {
             System.out.println("Game Over: collision with top border");
-            System.out.printf("Coordinates of head when game ended: (%f, %f)\n", snake.bodySegments.getFirst().getX(), snake.bodySegments.getFirst().getY());
+            System.out.printf("Coordinates of head when game ended: (%f, %f)\n", snake.bodySegments.get(0).getX(), snake.bodySegments.get(0).getY());
             System.exit(1);
         }
-        if(distFromBottom <= gameSegmentSize/2) {
+        if (distFromBottom <= gameSegmentSize / 2) {
             System.out.println("Game Over: collision with bottom border");
-            System.out.printf("Coordinates of head when game ended: (%f, %f)\n", snake.bodySegments.getFirst().getX(), snake.bodySegments.getFirst().getY());
+            System.out.printf("Coordinates of head when game ended: (%f, %f)\n", snake.bodySegments.get(0).getX(), snake.bodySegments.get(0).getY());
             System.exit(1);
         }
-        if(distFromLeft <= gameSegmentSize/2) {
+        if (distFromLeft <= gameSegmentSize / 2) {
             System.out.println("Game Over: collision with left border");
-            System.out.printf("Coordinates of head when game ended: (%f, %f)\n", snake.bodySegments.getFirst().getX(), snake.bodySegments.getFirst().getY());
+            System.out.printf("Coordinates of head when game ended: (%f, %f)\n", snake.bodySegments.get(0).getX(), snake.bodySegments.get(0).getY());
             System.exit(1);
         }
-        if(distFromRight <= gameSegmentSize/2) {
+        if (distFromRight <= gameSegmentSize / 2) {
             System.out.println("Game Over: collision with right border");
-            System.out.printf("Coordinates of head when game ended: (%f, %f)\n", snake.bodySegments.getFirst().getX(), snake.bodySegments.getFirst().getY());
+            System.out.printf("Coordinates of head when game ended: (%f, %f)\n", snake.bodySegments.get(0).getX(), snake.bodySegments.get(0).getY());
             System.exit(1);
         }
     }
@@ -59,30 +60,10 @@ public class GameBoard {
     }
 
     public boolean checkFood(double gameSegmentSize) {
-        double xDiffSqr = (snake.bodySegments.getFirst().getX()-food.getX())*(snake.bodySegments.getFirst().getX()-food.getX());
-        double yDiffSqr = (snake.bodySegments.getFirst().getY()-food.getY())*(snake.bodySegments.getFirst().getY()-food.getY());
+        double xDiffSqr = (snake.bodySegments.get(0).getX() - food.getX()) * (snake.bodySegments.get(0).getX() - food.getX());
+        double yDiffSqr = (snake.bodySegments.get(0).getY() - food.getY()) * (snake.bodySegments.get(0).getY() - food.getY());
         double distance = Math.sqrt(xDiffSqr + yDiffSqr);
-        return distance < gameSegmentSize/2;
+        return distance < gameSegmentSize / 2;
     }
 
-    public static class Snake {
-        public LinkedList<Point2D.Double> bodySegments;
-
-        Snake(int boardWidth, int boardHeight, int segmentSize) {
-            bodySegments = new LinkedList<>();
-            bodySegments.add(0, new Point2D.Double(ThreadLocalRandom.current().nextDouble(segmentSize/2, boardWidth - segmentSize/2), ThreadLocalRandom.current().nextDouble(segmentSize/2, boardHeight - segmentSize/2)));
-        }
-
-        public void move() {
-            for(int i = bodySegments.size() - 1; i > 0; i--) {
-                bodySegments.get(i).setLocation(bodySegments.get(i - 1));
-            }
-        }
-
-        public void addBodySegment() {
-            Point2D.Double newBodySegment;
-            newBodySegment = new Point2D.Double(bodySegments.getLast().getX(), bodySegments.getLast().getY());
-            bodySegments.addLast(newBodySegment);
-        }
-    }
 }
